--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
   matrix:
   # #- platform: mingw64720x8664
   - platform: mingw64630i686
-  #- platform: mingw64630x8664
+  - platform: mingw64630x8664
   # #- platform: mingw64730x8664
    
 matrix:
@@ -60,7 +60,6 @@ install:
         cd c:\projects\gdl\win32libs
         $env:CC="C:/mingw-w64/$env:GCC/$env:mname/bin/gcc"
         $env:CXX="C:/mingw-w64/$env:GCC/$env:mname/bin/g++"
-        $env:platform="mingw64630x8664" # set this here to follow the MINGW track.
        }
   - ps: |
       if ($true)   # MSYS mode
