small issue in Basic_benchmark, better finding for recent OS of libs. MultiArch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,9 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(VERSION "0.9.8 git")
 enable_testing()
 
+# cf issue 511, managing MultiArch on Debian ...
+include(GNUInstallDirs)
+
 include(CheckIncludeFile)
 include(CheckIncludeFileCXX)
 include(CheckLibraryExists)
