--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
     - os: osx
-      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL  ANTLR=yes
+      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
 
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
+      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI  ANTLR=yes
     - os: osx
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
 
