Use correct Python interpreter in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -868,7 +868,7 @@ if(PYTHON OR PYTHON_MODULE)
         if(NOT PYTHONVERSION)
             set(PYTHONVERSION 2)
         endif()
-        find_package(PythonInterp)
+        find_package(PythonInterp ${PYTHONVERSION})
         find_package(PythonLibs ${PYTHONVERSION})
         if (NOT PYTHON_VERSION_STRING VERSION_EQUAL PYTHONLIBS_VERSION_STRING)
             message(STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE})
