--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
   matrix:
   # #- platform: mingw64720x8664
   - platform: mingw64630x8664
-  #- platform: mingw64630i686
+  - platform: mingw64630i686
   # #- platform: mingw64730x8664
    
 matrix:
