added test_poly_fit to list of tests

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -172,6 +172,7 @@ TESTS = \
   test_pmulti.pro \
   test_pmulti_basic.pro \
   test_point_lun.pro \
+  test_poly_fit.pro \
   test_postscript.pro \
   test_product.pro \
   test_ps_decomposed.pro \
