our magick_cl tool is only compatible with imagemagick version 6 or less and definitely not with IM >=7. Also, catch all messages and errors issued by graphicsmagick. IM supports now HDR data, so it would be better to switch to IM (IMHO). Not a big deal.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -538,6 +538,11 @@ if(MAGICK)
   if(ImageMagick_FOUND)
     find_program(MAGICKXXCONFIG Magick++-config)
     if(MAGICKXXCONFIG)
+      execute_process(COMMAND ${MAGICKXXCONFIG} "--version" OUTPUT_VARIABLE imagemagick_version OUTPUT_STRIP_TRAILING_WHITESPACE)
+      if(imagemagick_version MATCHES "^[7-9]") 
+      message (FATAL_ERROR "ImageMagick is required and found but version is ${imagemagick_version} or above, which is >= 7 and not supported yes (FIXME)!\n")
+      endif()
+      unset(imagemagick_version)
       execute_process(COMMAND ${MAGICKXXCONFIG} "--libs" OUTPUT_VARIABLE MAGICKXXCONFIGLIBS OUTPUT_STRIP_TRAILING_WHITESPACE)
       set(LIBRARIES ${LIBRARIES} ${MAGICKXXCONFIGLIBS})     
     else(MAGICKXXCONFIG)
